Initial commit of Netflix clone

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta name="author" content="Empty-Hacker">
+<meta name="author" content="shreyansh mishra">
  
    <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
